    package as non-root user, eg: closes #182
      - export INSTALL_USER=bas; configure

    Reported by: shildebrand at venturebeat dot com
    Fixed by: Bas van der Vlies

  * Re-arranged some code so that we can override ticket fields in
    email2trac.conf, mail subject line or mail body text, closes #182

    Reported by: shildebrand at venturebeat dot com
    Fixed by: Bas van der Vlies

 -- Bas van der Vlies <basv@sara.nl>  Wed, 03 Mar 2010 15:50:35 +0100

email2trac (1.2.0-1) stable; urgency=low

  * Added an option to run_email2trac to set the PYTHON_EGG_CACHE
    environment variable (-e|--eggcache), closes #174
    Author: pepl at cpan dot org
    Applied by: Bas van der Vlies

  * Ticket fields can be set inline an email: closes #171, #88
     - controlled by parameter 'inline_properties', default behaviour off
     - see https://subtrac.sara.nl/oss/email2trac/wiki/Email2tracParse#Updateticketfields

    Author: samuel at hoffstaetter dot com
    Applied by: Bas van der Vlies

  * Fixed a bug when there is no subject field in the message, closes #179
    Reported by: xurizaemon
    Fixed by: Bas van der Vlies

  * Added unicode support attachment filenames, closes #177
    Reported by: obwandner add concertare dot de
    Fixed by: Bas van der Vlies

  * Email to blog did not work at all. It works but it can not handle 
    attachments. see #175.
    Reported by: oland dot wells add gmail.com
    Patches    : Bas van der Vlies

  * Show errors when we can not include attachments in the ticket, see #165
    Requested by: hju add jochenkuhl dot de and  dereks add cool-st dot com
    Fixed by: Bas van der Vlies

  * Added a new option 'email_triggers_workflow'. When a ticket is closed and 
    an update is received via email. The ticket will be reopened or triggers 
    a ticket workflow. This action can be skipped if we set the 
    email_triggers_workflow option to 0. The default value is 1, closes #180
    Author: zac add sprackettd dot com